crates/carta/tests/snapshots/golden_e2e__ipynb__mediawiki__escaped-line-break-literal.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="noesc" class="cell markdown">
line one\ line two

</div>
