crates/carta/tests/snapshots/golden_e2e__ipynb__mediawiki__markdown-dialect.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="dialect" class="cell markdown">
# first
# second
# auto one
# auto two

1) prose only 2) still prose

Visit http://example.com or write [mailto:user@example.com user@example.com] or ping [mailto:5@home 5@home].

Nested '''''bold italic''''' text.

</div>
