crates/carta/tests/snapshots/golden_e2e__ipynb__mediawiki__metadata.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="body" class="cell markdown">
Document body.

</div>
