crates/carta/tests/snapshots/golden_e2e__ipynb__mediawiki__raw-asciidoc.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="embed" class="cell raw" data-raw_mimetype="text/asciidoc">
</div>
