crates/carta/tests/snapshots/golden_e2e__ipynb__mediawiki__raw-mimetype.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<div id="embed" class="cell raw" data-format="text/html" data-raw_mimetype="text/latex">
</div>
